Layout de la aplicación

--- a/calendar/calendario-base/index.html
+++ b/calendar/calendario-base/index.html
@@ -10,8 +10,13 @@
 </head>
 
 <body>
-    <h1>Calendario</h1>
-    <i class="icon-calendar"></i>
+
+    <div class="page">
+        <header class="header"></header>
+        <div class="sidebar"></div>
+        <main class="calendar"></main>
+    </div>
+
 </body>
 
 </html>
