--- a/calendar/calendario-base/index.html
+++ b/calendar/calendario-base/index.html
@@ -14,7 +14,9 @@
     <div class="page">
         <header class="header"></header>
         <div class="sidebar"></div>
-        <main class="calendar"></main>
+        <main class="calendar">
+            <div class="calendarWeek"></div>
+        </main>
     </div>
 
 </body>
