--- a/calendar/calendario-base/index.html
+++ b/calendar/calendario-base/index.html
@@ -15,6 +15,7 @@
         <header class="header"></header>
         <div class="sidebar"></div>
         <main class="calendar">
+            <div class="currentTime"></div>
             <div class="calendarWeek">
                 <div class="timezoneCell">GMT-5</div>
                 <h2 class="calendarDay">
